worked on tables

--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,7 @@ cognitive-modeling_files/
 cognitive-modeling-supplement_cache/
 cognitive-modeling-supplement_files/
 *.tex
+*.aux
+*.log
 .Rhistory
 .~lock*
